--- a/treeprunning/src/assets/main.css
+++ b/treeprunning/src/assets/main.css
@@ -1,10 +1,10 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 0;
-  padding: 2rem;
   font-weight: normal;
+  place-items: center;
 }
 
 a,
@@ -21,15 +21,3 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 0;
-  }
-}
